fixed the broken image links as well as text align justified for main body div on the home.html page

--- a/angular/style.css
+++ b/angular/style.css
@@ -102,7 +102,7 @@ section *{
     display:inline-block;
     left:20px;
     width:780px;
-    text-align: center;
+    text-align: justify;
 }
 .menu_item{
     height: 140px;
